--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
+@import url(https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500&display=swap);
 @charset "UTF-8";
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
@@ -58,8 +59,20 @@
   --bs-body-line-height: 1.6;
   --bs-body-color: #212529;
   --bs-body-bg: #f8fafc;
-}
 
+    --bs-font-Mukta: 'Mukta', sans-serif;
+    --blue-bg: #005CE6;
+}
+.gradient-custom{
+    /* fallback for old browsers */
+  background: #6a11cb;
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+}
 *,
 *::before,
 *::after {
@@ -74,7 +87,7 @@
 
 body {
   margin: 0;
-  font-family: var(--bs-body-font-family);
+  font-family: var(--bs-body-font-Mukta);
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
   line-height: var(--bs-body-line-height);
@@ -231,13 +244,18 @@ sup {
 }
 
 a {
-  color: #0d6efd;
+  color: #FFF;
   text-decoration: underline;
 }
 a:hover {
-  color: #0a58ca;
+  color: darkgray;
 }
-
+.color-black {
+    color: #000;
+}
+.color-white{
+    color: #ffffff !important;
+}
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
   color: inherit;
   text-decoration: none;
@@ -4024,13 +4042,18 @@ textarea.form-control-lg {
 }
 
 .navbar {
-  position: relative;
+  position: sticky;
+  top: 0;
+  left: 0   ;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  /* padding-top: 0.5rem; */
+  /* background-color: transparent; */
+  /* background-color: #2F66F4; */
+  background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+  padding-bottom: 0.2rem;
 }
 .navbar > .container,
 .navbar > .container-fluid,
@@ -4236,6 +4259,8 @@ textarea.form-control-lg {
   .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 0.5rem;
     padding-left: 0.5rem;
+    color: #000;
+    font-weight: 400;
   }
   .navbar-expand-lg .navbar-nav-scroll {
     overflow: visible;
@@ -4440,7 +4465,7 @@ textarea.form-control-lg {
   color: rgba(0, 0, 0, 0.9);
 }
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.55);
+  color: #000
 }
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
   color: rgba(0, 0, 0, 0.7);
@@ -4465,7 +4490,7 @@ textarea.form-control-lg {
 .navbar-light .navbar-text a,
 .navbar-light .navbar-text a:hover,
 .navbar-light .navbar-text a:focus {
-  color: rgba(0, 0, 0, 0.9);
+  color: #000;
 }
 
 .navbar-dark .navbar-brand {
